updated crab lobster shrimp octo on nav, buttons and collapsable

--- a/seaFood/css/crabs/header.css
+++ b/seaFood/css/crabs/header.css
@@ -19,7 +19,7 @@
         font-weight: 600;
     }
     
-    .crabType1 {
+    .crabType1, .crabType2, .crabType3, .crabType4, .crabType5, .crabType6, .crabType7, .crabType8, .crabType9, .crabType10 {
         display: flex;
         font-size: 18px;
         justify-content: center;
@@ -34,7 +34,7 @@
         padding-bottom: 50px;
     }
     
-    .crabType1 h1 {
+    .crabType1 h1, .crabType2 h1, .crabType3 h1, .crabType4 h1, .crabType5 h1, .crabType6 h1, .crabType7 h1, .crabType8 h1, .crabType9 h1, .crabType10 h1 {
         display: flex;
         font-size: 20px;
         justify-content: center;
@@ -42,7 +42,7 @@
         width: 100vw;
     }
     
-    .crabType1 p {
+    .crabType1 p, .crabType2 p, .crabType3 p, .crabType4 p, .crabType5 p, .crabType6 p, .crabType7 p, .crabType8 p, .crabType9 p, .crabType10 p {
         display: flex;
         font-size: 18px;
         justify-content: center;
@@ -52,303 +52,3 @@
         padding-top: 20px;
     }
     
-    .crabType2 {
-        display: flex;
-        font-size: 18px;
-        justify-content: center;
-        text-decoration: none;
-        position: relative;
-        top: 0;
-        width: 100vw;
-        height: auto;
-        flex-direction: column;
-        text-align: center;
-        padding-bottom: 50px;
-        padding-top: 20px;
-    }
-    
-    .crabType2 h1 {
-        display: flex;
-        font-size: 20px;
-        justify-content: center;
-        text-decoration: underline;
-        width: 100vw;
-    }
-    
-    .crabType2 p {
-        display: flex;
-        font-size: 18px;
-        justify-content: center;
-        text-decoration: none;
-        position: relative;
-        width: 100vw;
-        padding-top: 20px;
-    }
-    
-    .crabType3 {
-        display: flex;
-        font-size: 18px;
-        justify-content: center;
-        text-decoration: none;
-        position: relative;
-        top: 0;
-        width: 100vw;
-        height: auto;
-        flex-direction: column;
-        text-align: center;
-        background-color: #f1f1f1;
-        padding-bottom: 50px;
-        padding-top: 20px;
-    }
-    
-    .crabType3 h1 {
-        display: flex;
-        font-size: 20px;
-        justify-content: center;
-        text-decoration: underline;
-        width: 100vw;
-    }
-    
-    .crabType3 p {
-        display: flex;
-        font-size: 18px;
-        justify-content: center;
-        text-decoration: none;
-        position: relative;
-        width: 100vw;
-        padding-top: 20px;
-    }
-    
-    .crabType4 {
-        display: flex;
-        font-size: 18px;
-        justify-content: center;
-        text-decoration: none;
-        position: relative;
-        top: 0;
-        width: 100vw;
-        height: auto;
-        flex-direction: column;
-        text-align: center;
-        padding-bottom: 50px;
-        padding-top: 20px;
-    }
-    
-    .crabType4 h1 {
-        display: flex;
-        font-size: 20px;
-        justify-content: center;
-        text-decoration: underline;
-        width: 100vw;
-    }
-    
-    .crabType4 p {
-        display: flex;
-        font-size: 18px;
-        justify-content: center;
-        text-decoration: none;
-        position: relative;
-        width: 100vw;
-        padding-top: 20px;
-    }
-    
-    .crabType5 {
-        display: flex;
-        font-size: 18px;
-        justify-content: center;
-        text-decoration: none;
-        position: relative;
-        top: 0;
-        width: 100vw;
-        height: auto;
-        flex-direction: column;
-        text-align: center;
-        background-color: #f1f1f1;
-        padding-bottom: 50px;
-        padding-top: 20px;
-    }
-    
-    .crabType5 h1 {
-        display: flex;
-        font-size: 20px;
-        justify-content: center;
-        text-decoration: underline;
-        width: 100vw;
-    }
-    
-    .crabType5 p {
-        display: flex;
-        font-size: 18px;
-        justify-content: center;
-        text-decoration: none;
-        position: relative;
-        width: 100vw;
-        padding-top: 20px;
-    }
-    
-    .crabType6 {
-        display: flex;
-        font-size: 18px;
-        justify-content: center;
-        text-decoration: none;
-        position: relative;
-        top: 0;
-        width: 100vw;
-        height: auto;
-        flex-direction: column;
-        text-align: center;
-        padding-bottom: 50px;
-        padding-top: 20px;
-    }
-    
-    .crabType6 h1 {
-        display: flex;
-        font-size: 20px;
-        justify-content: center;
-        text-decoration: underline;
-        width: 100vw;
-    }
-    
-    .crabType6 p {
-        display: flex;
-        font-size: 18px;
-        justify-content: center;
-        text-decoration: none;
-        position: relative;
-        width: 100vw;
-        padding-top: 20px;
-    }
-    
-    .crabType7 {
-        display: flex;
-        font-size: 18px;
-        justify-content: center;
-        text-decoration: none;
-        position: relative;
-        top: 0;
-        width: 100vw;
-        height: auto;
-        flex-direction: column;
-        text-align: center;
-        padding-bottom: 50px;
-        padding-top: 20px;
-        background-color: #f1f1f1;
-    }
-    
-    .crabType7 h1 {
-        display: flex;
-        font-size: 20px;
-        justify-content: center;
-        text-decoration: underline;
-        width: 100vw;
-    }
-    
-    .crabType7 p {
-        display: flex;
-        font-size: 18px;
-        justify-content: center;
-        text-decoration: none;
-        position: relative;
-        width: 100vw;
-        padding-top: 20px;
-    }
-
-    .crabType8 {
-        display: flex;
-        font-size: 18px;
-        justify-content: center;
-        text-decoration: none;
-        position: relative;
-        top: 0;
-        width: 100vw;
-        height: auto;
-        flex-direction: column;
-        text-align: center;
-        padding-bottom: 50px;
-        padding-top: 20px;
-    }
-    
-    .crabType8 h1 {
-        display: flex;
-        font-size: 20px;
-        justify-content: center;
-        text-decoration: underline;
-        width: 100vw;
-    }
-    
-    .crabType8 p {
-        display: flex;
-        font-size: 18px;
-        justify-content: center;
-        text-decoration: none;
-        position: relative;
-        width: 100vw;
-        padding-top: 20px;
-    }
-
-    .crabType9 {
-        display: flex;
-        font-size: 18px;
-        justify-content: center;
-        text-decoration: none;
-        position: relative;
-        top: 0;
-        width: 100vw;
-        height: auto;
-        flex-direction: column;
-        text-align: center;
-        padding-bottom: 50px;
-        padding-top: 20px;
-        background-color: #f1f1f1;
-    }
-    
-    .crabType9 h1 {
-        display: flex;
-        font-size: 20px;
-        justify-content: center;
-        text-decoration: underline;
-        width: 100vw;
-    }
-    
-    .crabType9 p {
-        display: flex;
-        font-size: 18px;
-        justify-content: center;
-        text-decoration: none;
-        position: relative;
-        width: 100vw;
-        padding-top: 20px;
-    }
-
-    .crabType10 {
-        display: flex;
-        font-size: 18px;
-        justify-content: center;
-        text-decoration: none;
-        position: relative;
-        top: 0;
-        width: 100vw;
-        height: auto;
-        flex-direction: column;
-        text-align: center;
-        padding-bottom: 50px;
-        padding-top: 20px;
-    }
-    
-    .crabType10 h1 {
-        display: flex;
-        font-size: 20px;
-        justify-content: center;
-        text-decoration: underline;
-        width: 100vw;
-    }
-    
-    .crabType10 p {
-        display: flex;
-        font-size: 18px;
-        justify-content: center;
-        text-decoration: none;
-        position: relative;
-        width: 100vw;
-        padding-top: 20px;
-    }
