--- a/seaFood/css/octopus/header.css
+++ b/seaFood/css/octopus/header.css
@@ -19,7 +19,7 @@
         font-weight: 600;
     }
     
-    .octoType1 {
+    .octoType1, .octoType2, .octoType3, .octoType4, .octoType5, .octoType6, .octoType7, .octoType8, .octoType9 {
         display: flex;
         font-size: 18px;
         justify-content: center;
@@ -34,7 +34,7 @@
         padding-bottom: 50px;
     }
     
-    .octoType1 h1 {
+    .octoType1 h1, .octoType2 h1, .octoType3 h1, .octoType4 h1, .octoType5 h1, .octoType6 h1, .octoType7 h1, .octoType8 h1, .octoType9 h1 {
         display: flex;
         font-size: 20px;
         justify-content: center;
@@ -42,275 +42,7 @@
         width: 100vw;
     }
     
-    .octoType1 p {
-        display: flex;
-        font-size: 18px;
-        justify-content: center;
-        text-decoration: none;
-        position: relative;
-        width: 100vw;
-        padding-top: 20px;
-    }
-    
-    .octoType2 {
-        display: flex;
-        font-size: 18px;
-        justify-content: center;
-        text-decoration: none;
-        position: relative;
-        top: 0;
-        width: 100vw;
-        height: auto;
-        flex-direction: column;
-        text-align: center;
-        padding-bottom: 50px;
-        padding-top: 20px;
-    }
-    
-    .octoType2 h1 {
-        display: flex;
-        font-size: 20px;
-        justify-content: center;
-        text-decoration: underline;
-        width: 100vw;
-    }
-    
-    .octoType2 p {
-        display: flex;
-        font-size: 18px;
-        justify-content: center;
-        text-decoration: none;
-        position: relative;
-        width: 100vw;
-        padding-top: 20px;
-    }
-    
-    .octoType3 {
-        display: flex;
-        font-size: 18px;
-        justify-content: center;
-        text-decoration: none;
-        position: relative;
-        top: 0;
-        width: 100vw;
-        height: auto;
-        flex-direction: column;
-        text-align: center;
-        background-color: #f1f1f1;
-        padding-bottom: 50px;
-        padding-top: 20px;
-    }
-    
-    .octoType3 h1 {
-        display: flex;
-        font-size: 20px;
-        justify-content: center;
-        text-decoration: underline;
-        width: 100vw;
-    }
-    
-    .octoType3 p {
-        display: flex;
-        font-size: 18px;
-        justify-content: center;
-        text-decoration: none;
-        position: relative;
-        width: 100vw;
-        padding-top: 20px;
-    }
-    
-    .octoType4 {
-        display: flex;
-        font-size: 18px;
-        justify-content: center;
-        text-decoration: none;
-        position: relative;
-        top: 0;
-        width: 100vw;
-        height: auto;
-        flex-direction: column;
-        text-align: center;
-        padding-bottom: 50px;
-        padding-top: 20px;
-    }
-    
-    .octoType4 h1 {
-        display: flex;
-        font-size: 20px;
-        justify-content: center;
-        text-decoration: underline;
-        width: 100vw;
-    }
-    
-    .octoType4 p {
-        display: flex;
-        font-size: 18px;
-        justify-content: center;
-        text-decoration: none;
-        position: relative;
-        width: 100vw;
-        padding-top: 20px;
-    }
-    
-    .octoType5 {
-        display: flex;
-        font-size: 18px;
-        justify-content: center;
-        text-decoration: none;
-        position: relative;
-        top: 0;
-        width: 100vw;
-        height: auto;
-        flex-direction: column;
-        text-align: center;
-        background-color: #f1f1f1;
-        padding-bottom: 50px;
-        padding-top: 20px;
-    }
-    
-    .octoType5 h1 {
-        display: flex;
-        font-size: 20px;
-        justify-content: center;
-        text-decoration: underline;
-        width: 100vw;
-    }
-    
-    .octoType5 p {
-        display: flex;
-        font-size: 18px;
-        justify-content: center;
-        text-decoration: none;
-        position: relative;
-        width: 100vw;
-        padding-top: 20px;
-    }
-    
-    .octoType6 {
-        display: flex;
-        font-size: 18px;
-        justify-content: center;
-        text-decoration: none;
-        position: relative;
-        top: 0;
-        width: 100vw;
-        height: auto;
-        flex-direction: column;
-        text-align: center;
-        padding-bottom: 50px;
-        padding-top: 20px;
-    }
-    
-    .octoType6 h1 {
-        display: flex;
-        font-size: 20px;
-        justify-content: center;
-        text-decoration: underline;
-        width: 100vw;
-    }
-    
-    .octoType6 p {
-        display: flex;
-        font-size: 18px;
-        justify-content: center;
-        text-decoration: none;
-        position: relative;
-        width: 100vw;
-        padding-top: 20px;
-    }
-    
-    .octoType7 {
-        display: flex;
-        font-size: 18px;
-        justify-content: center;
-        text-decoration: none;
-        position: relative;
-        top: 0;
-        width: 100vw;
-        height: auto;
-        flex-direction: column;
-        text-align: center;
-        padding-bottom: 50px;
-        padding-top: 20px;
-        background-color: #f1f1f1;
-    }
-    
-    .octoType7 h1 {
-        display: flex;
-        font-size: 20px;
-        justify-content: center;
-        text-decoration: underline;
-        width: 100vw;
-    }
-    
-    .octoType7 p {
-        display: flex;
-        font-size: 18px;
-        justify-content: center;
-        text-decoration: none;
-        position: relative;
-        width: 100vw;
-        padding-top: 20px;
-    }
-
-    .octoType8 {
-        display: flex;
-        font-size: 18px;
-        justify-content: center;
-        text-decoration: none;
-        position: relative;
-        top: 0;
-        width: 100vw;
-        height: auto;
-        flex-direction: column;
-        text-align: center;
-        padding-bottom: 50px;
-        padding-top: 20px;
-    }
-    
-    .octoType8 h1 {
-        display: flex;
-        font-size: 20px;
-        justify-content: center;
-        text-decoration: underline;
-        width: 100vw;
-    }
-    
-    .octoType8 p {
-        display: flex;
-        font-size: 18px;
-        justify-content: center;
-        text-decoration: none;
-        position: relative;
-        width: 100vw;
-        padding-top: 20px;
-    }
-
-    .octoType9 {
-        display: flex;
-        font-size: 18px;
-        justify-content: center;
-        text-decoration: none;
-        position: relative;
-        top: 0;
-        width: 100vw;
-        height: auto;
-        flex-direction: column;
-        text-align: center;
-        padding-bottom: 50px;
-        padding-top: 20px;
-        background-color: #f1f1f1;
-    }
-    
-    .octoType9 h1 {
-        display: flex;
-        font-size: 20px;
-        justify-content: center;
-        text-decoration: underline;
-        width: 100vw;
-    }
-    
-    .octoType9 p {
+    .octoType1 p, .octoType2 p, .octoType3 p, .octoType4 p, .octoType5 p, .octoType6 p, .octoType7 p, .octoType8 p, .octoType9 p {
         display: flex;
         font-size: 18px;
         justify-content: center;
