--- a/seaFood/css/shrimp/main.css
+++ b/seaFood/css/shrimp/main.css
@@ -3,7 +3,7 @@
     height: 100vh;
     grid-template-columns: 1fr 1fr;
     grid-template-rows: auto;
-    grid-template-areas: "logo logo" 
+    grid-template-areas: "nav-main nav-main" 
                          "hero hero"
                          "content content"
                          "newsLetter newsLetter"
@@ -35,7 +35,7 @@
 
 .box {
     position: relative; 
-    height: 20vh;
+    height: 26vh;
     width: 100%;
     display: flex;
     align-items: center;
@@ -55,98 +55,6 @@
     opacity: 0.5;
 }
 
-.nav {
-    position: relative;
-    color: #ffffff;  
-    font-size: 30px;
-    line-height: 0.9;
-    text-align: center;
-}
-
-.nav ul {
-    display: inline-flex;
-    list-style-type: none;
-    margin: 0;
-    padding: 0;
-    overflow: hidden;
-    background-color: none;
-    bottom: 5px;
-    position: relative;
-    flex-wrap: wrap;
-    justify-content: center;
-    padding: 5px;
-}
-
-.nav li {
-    border-right: 1px solid #bbb;
-    line-height: 100%;
-}
-
-.nav li:last-child {
-    border-right: none;
-}
-
-.nav li a {
-    display: inline;
-    color: white;
-    text-align: center;
-    padding: 2px 14px;
-    text-decoration: underline;
-    font-size:24px;
-    transition: 0.5s ease-in-out;
-}
-
-.nav li a:hover {
-    background: rgb(4, 122, 219);
-    padding: 25px;
-  }
-
-  /* --------------------------------------- */
-  .nav-mini {
-    position: relative;
-    color: #ffffff;  
-    font-size: 30px;
-    line-height: 0.9;
-    text-align: center;
-}
-
-.nav-mini ul {
-    display: inline-flex;
-    list-style-type: none;
-    margin: 0;
-    padding: 0;
-    overflow: hidden;
-    background-color: none;
-    bottom: 5px;
-    position: relative;
-    flex-wrap: wrap;
-    justify-content: center;
-    padding: 5px;
-}
-
-.nav-mini li {
-    border-right: 1px solid #bbb;
-    line-height: 100%;
-}
-
-.nav-mini li:last-child {
-    border-right: none;
-}
-
-.nav-mini li a {
-    display: inline;
-    color: white;
-    text-align: center;
-    padding: 2px 14px;
-    text-decoration: underline;
-    font-size:18px;
-    transition: 0.5s ease-in-out;
-}
-
-.nav-mini li a:hover {
-    background: rgb(4, 122, 219);
-    padding: 25px;
-  }
   /* ------------------------------------------ */
   .seaLifeType {
     position: relative;
@@ -205,6 +113,37 @@
     flex-wrap: wrap;
 }
 
+.collapsible {
+  display: flex;
+  background-color: rgba(170, 170, 170, 0);
+  color: #142c41;
+  cursor: pointer;
+  padding: 18px;
+  width: 50%;
+  border: none;
+  text-align: left;
+  outline: none;
+  font-size: 15px;
+  justify-content: center;
+  margin: 10px;
+  border: 2px solid #142c41;
+  border-radius: 12px;
+  font-size: 20px;
+  transition: ease-in-out 0.5s;
+}
+
+
+.active, .collapsible:hover {
+  background-color: rgb(89, 125, 243);
+}
+
+.content2 {
+  padding: 0;
+  display: none;
+  overflow: hidden;
+  background-color: #f1f1f1;
+}
+
   .shrimp1{
     display: flex;
     position: relative;
@@ -216,124 +155,21 @@
     justify-content: center;
 }
 
-.shrimpType1 {
+.shrimpType1,.shrimpType2,.shrimpType3,.shrimpType4,.shrimpType5,.shrimpType6,.shrimpType7,.shrimpType8,.shrimpType9 {
     display: flex;
     position: relative;
     width: 100%;
     height: auto;
 }
 
-.shrimpType2 {
+.shrimpType10,.shrimpType11,.shrimpType12,.shrimpType13,.shrimpType14,.shrimpType15,.shrimpType16,.shrimpType17 {
     display: flex;
     position: relative;
     width: 100%;
     height: auto;
 }
 
-.shrimpType3 {
-    display: flex;
-    position: relative;
-    width: 100%;
-    height: auto;
-}
 
-.shrimpType4 {
-    display: flex;
-    position: relative;
-    width: 100%;
-    height: auto;
-}
-
-.shrimpType5 {
-    display: flex;
-    position: relative;
-    width: 100%;
-    height: auto;
-}
-
-.shrimpType6 {
-    display: flex;
-    position: relative;
-    width: 100%;
-    height: auto;
-}
-
-.shrimpType7 {
-    display: flex;
-    position: relative;
-    width: 100%;
-    height: auto;
-}
-
-.shrimpType8 {
-    display: flex;
-    position: relative;
-    width: 100%;
-    height: auto;
-}
-
-.shrimpType9 {
-    display: flex;
-    position: relative;
-    width: 100%;
-    height: auto;
-}
-
-.shrimpType10 {
-    display: flex;
-    position: relative;
-    width: 100%;
-    height: auto;
-}
-
-.shrimpType11 {
-    display: flex;
-    position: relative;
-    width: 100%;
-    height: auto;
-}
-
-.shrimpType12 {
-    display: flex;
-    position: relative;
-    width: 100%;
-    height: auto;
-}
-
-.shrimpType13 {
-    display: flex;
-    position: relative;
-    width: 100%;
-    height: auto;
-}
-
-.shrimpType14 {
-    display: flex;
-    position: relative;
-    width: 100%;
-    height: auto;
-}
-
-.shrimpType15 {
-    display: flex;
-    position: relative;
-    width: 100%;
-    height: auto;
-}
-
-.shrimpType16 {
-    display: flex;
-    position: relative;
-    width: 100%;
-    height: auto;
-}
-
-.shrimpType17 {
-    display: flex;
-    position: relative;
-    width: 100%;
-    height: auto;
-}
   /* -------------------------------------- */
 
 
@@ -343,6 +179,7 @@
     width: 100vw;
     background-color: #ffffff;
     padding-bottom: 30px;
+    margin-top: 40px;
 }
 
 
