--- a/seaFood/css/shrimp/nav.css
+++ b/seaFood/css/shrimp/nav.css
@@ -171,7 +171,7 @@
     flex-wrap: wrap;
     font-size: 17px;
     font-weight: bold;
-    /* z-index: 0; */
+    z-index: 2;
     /* padding-left: 6px; */
   }
   
